First examples of using persistent objects for ReSTful web service. I get a server error (code 500), if I use the @Entity objects directly (i.e. return @Entity objects from the ReSTful web service), but no error if I convert to DTO objects. So I'll keep to DTOs.

--- a/selfstudy-rest/src/main/webapp/WEB-INF/web.xml
+++ b/selfstudy-rest/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
         "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 <web-app>
-    <display-name>selfstudy-rest</display-name>
+    <display-name>SelfstudyWebApp</display-name>
     <servlet>
         <servlet-name>Jersey-Servlet</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
