--- a/selfstudy-rest/pom.xml
+++ b/selfstudy-rest/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>selfstudy-rest</artifactId>
     <packaging>war</packaging>
 
-    <name>selfstudy-rest</name>
+    <name>SelfstudyWebApp</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <version>2.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -40,10 +40,15 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>nu.steffengrondahl</groupId>
+            <artifactId>selfstudy-persist</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
-        <finalName>selfstudy-rest</finalName>
+        <finalName>SelfstudyWebApp</finalName>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
