Implemented hyperlinks for projects and tool for exporting json data from database

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>selfstudy-persist</module>
         <module>selfstudy-rest</module>
+        <module>selfstudy-export</module>
     </modules>
     <packaging>pom</packaging>
 
