--- a/selfstudy-rest/pom.xml
+++ b/selfstudy-rest/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>selfstudy-rest</artifactId>
     <packaging>war</packaging>
 
-    <name>SelfstudyWebApp</name>
+    <name>SelfStudy</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -33,12 +33,6 @@
             <artifactId>servlet-api</artifactId>
             <version>2.4</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>nu.steffengrondahl</groupId>
