--- a/selfstudy-export/pom.xml
+++ b/selfstudy-export/pom.xml
@@ -52,7 +52,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>nu.steffengrondahl.selfstudy.export.ExportProjects</mainClass>
+                                    <mainClass>nu.steffengrondahl.selfstudy.export.ProjectsExporter</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
