Minor bugfix: Closing thread when shutting down Apache Tomcat.

--- a/selfstudy-rest/src/main/webapp/WEB-INF/web.xml
+++ b/selfstudy-rest/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,9 @@
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 <web-app>
     <display-name>SelfstudyWebApp</display-name>
+    <listener>
+        <listener-class>nu.steffengrondahl.selfstudy.rest.ContextFinalizer</listener-class>
+    </listener>
     <servlet>
         <servlet-name>Jersey-Servlet</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
