--- a/selfstudy-export/pom.xml
+++ b/selfstudy-export/pom.xml
@@ -18,11 +18,13 @@
     </properties>
 
     <dependencies>
+        <!--
         <dependency>
             <groupId>javax.json</groupId>
             <artifactId>javax.json-api</artifactId>
             <version>1.0</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
@@ -52,7 +54,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>nu.steffengrondahl.selfstudy.export.ProjectsExporter</mainClass>
+                                    <mainClass>nu.steffengrondahl.selfstudy.export.JsonExporter</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
