--- a/selfstudy-rest/pom.xml
+++ b/selfstudy-rest/pom.xml
@@ -45,6 +45,13 @@
         <finalName>SelfStudyWebApp</finalName>
         <plugins>
             <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>6.1.17</version>
