JSONP support in selfstudy-rest for projects (ProjectResource). Added single page application written in AngularJS (selfstudy-web).

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>selfstudy-persist</module>
         <module>selfstudy-rest</module>
         <module>selfstudy-export</module>
+        <module>selfstudy-web</module>
     </modules>
     <packaging>pom</packaging>
 
